syntax = "proto3";
package gen;

message SayHelloRequest {
    string yourName = 1;
}

message SayHelloResponse {
    string message = 1;
}

message EatAppleRequest {
    string num = 1;
}

message EatAppleResponse {
    string message = 1;
}

service YourService {
    rpc sayHello (SayHelloRequest) returns (SayHelloResponse) {}
    rpc eatApple (EatAppleRequest) returns (EatAppleResponse) {}
}